--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -252,7 +252,7 @@
     <p align="justify"> Backstepping and Proportional-Derivative (PD) methods was used for the control of a quadrotor
     unit and subsequently proposed for autonomous tracking of an endangered species; the ’Northern white rhino’. Extended Kalman
     Filter (EKF) estimation was applied for the localization of the rhino in a virtual wildlife reserve.</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://github.com/kbmajeed/endangered_species_dronetracking">Check it out</a>
   </div>
 </div>
 
