--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -379,7 +379,7 @@
     <p align="justify">Backstepping is a Nonlinear controller based on Lyapunov functions. 
       Four controllers are developed for the Altitude, Yaw, Pitch, and Roll attitudes of the quadrotor.
     </p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://github.com/kbmajeed/backstepping_quadrotor">Check it out</a>
   </div>
 </div>
 
