--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -393,6 +393,6 @@
       <li align="left"> Matlab </li>
     </ul>
     <p align="justify">Basic algorithms in Image processing. Using Matlab code to explore different Edge detection algorithms and parameters.</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://github.com/kbmajeed/edge_detection">Check it out</a>
   </div>
 </div>
