--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -348,7 +348,7 @@
     </ul>
     <p align="justify">Extrinsic noise is everywhere. Using a microphone and a Voltage controlled crystall oscillator,
       an RF circuit was built to jam cellular communications at the GSM band using destructive interference.</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://github.com/kbmajeed/mobile_jammer">Check it out</a>
   </div>
 </div>
 
