--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -354,7 +354,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/quadrotorSensorCapsule.png" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/vrepQuadPix.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Quadrotor Simulation with VREP </h3>
