--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -66,6 +66,22 @@
 
 <div class="user-projects">
   <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/stockmarket.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> Random Forests for Algorithmic Trading </h3>
+    <ul>
+      <li align="left"> Python, OpenCV </li>
+    </ul>
+    <p align="justify"> This Portfolio simulator builds the performance of the portolio for a given stock and market data.
+        It receives an "Orders" file containing actions: "BUY", "SELL", Symbol of the stock, Dates, and 
+      Starting value. The simulator then builds the portolio returns</p>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/Figure1.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
@@ -164,6 +180,21 @@
 
 <div class="user-projects">
   <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> Q-Learning for Bot Navigation </h3>
+    <ul>
+      <li align="left"> Python </li>
+    </ul>
+    <p align="justify"> The Model-free reinforcement learning Q-learning algorithm was programmed for navigating 
+    a simple maze</p>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mitt_hsv_giffff.gif" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
@@ -208,6 +239,19 @@
   </div>
 </div>
 
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> Implementing YOLO Object detection algorithm </h3>
+    <ul>
+      <li align="left"> YOLO, Python, Keras </li>
+    </ul>
+    <p align="justify">This work is based on the implementation of the YOLO (You-only-look-once) algorithm for object detection.</p>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+  </div>
+</div>
 
 <div class="user-projects">
   <div class="images-right">
@@ -242,16 +286,28 @@
 
 <div class="user-projects">
   <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> Implementing YOLO Object detection algorithm </h3>
+    <ul>
+      <li align="left"> YOLO, Python, Keras </li>
+    </ul>
+    <p align="justify">This work is based on the implementation of the YOLO (You-only-look-once) algorithm for object detection.</p>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/rhino.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3 align="center"> Tracking Endangered Rhinoceros with an Unmanned Drone </h3>
+    <h3 align="center"> Nonlinear Backstepping Control of Induction Motor </h3>
     <ul>
-      <li align="left"> Matlab, Extended Kalman Filter, Backstepping & PD Control </li>
+      <li align="left"> Matlab, Simulink, Lyapunov Backstepping </li>
     </ul>
-    <p align="justify"> Backstepping and Proportional-Derivative (PD) methods was used for the control of a quadrotor
-    unit and subsequently proposed for autonomous tracking of an endangered species; the ’Northern white rhino’. Extended Kalman
-    Filter (EKF) estimation was applied for the localization of the rhino in a virtual wildlife reserve.</p>
+    <p align="justify"> Lyapunov based based backstepping controller was developed to control an induction motor.</p>
     <a class="project-link" href="https://github.com/kbmajeed/endangered_species_dronetracking">Check it out</a>
   </div>
 </div>
@@ -286,6 +342,23 @@
     Second is to compute the transition difference. Third involves finding and synthesizing
     recurrent loops</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/"> Private </a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/image_blend.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> Cat vs Non-cat classification with Deep Networks </h3>
+    <ul>
+      <li align="left"> Python, NumPy, PIL, SciPy </li>
+    </ul>
+    <p align="justify">Implementing the paper "A multiresolution spline with application to image mosaics".
+      A cool framework was developed to blend images using a predefined mask. This can 
+      be used for interesting image editing such as face swaps</p>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
