--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -293,7 +293,8 @@
     <ul>
       <li align="left"> YOLO, Python, Keras </li>
     </ul>
-    <p align="justify">This work is based on the implementation of the YOLO (You-only-look-once) algorithm for object detection.</p>
+    <p align="justify">This work is based on the implementation of the YOLO (You-only-look-once) algorithm for object detection.
+    </p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
@@ -307,7 +308,8 @@
     <ul>
       <li align="left"> Matlab, Simulink, Lyapunov Backstepping </li>
     </ul>
-    <p align="justify"> Lyapunov based based backstepping controller was developed to control an induction motor.</p>
+    <p align="justify"> Lyapunov based based backstepping controller was developed to control an induction motor.
+    </p>
     <a class="project-link" href="https://github.com/kbmajeed/endangered_species_dronetracking">Check it out</a>
   </div>
 </div>
