--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -188,7 +188,10 @@
       <li align="left"> Python </li>
     </ul>
     <p align="justify"> The Model-free reinforcement learning Q-learning algorithm was programmed for navigating 
-    a simple maze</p>
+    a simple maze. An image is converted to a HSV color space for color based segmentation.
+    The system emphasizes body tones that can be used for tracking, AR applications and so on. 
+      An image is converted to a HSV color space for color based segmentation.
+    The system emphasizes body tones that can be used for tracking, AR applications and so on.</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
