--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -251,7 +251,10 @@
     <ul>
       <li align="left"> YOLO, Python, Keras </li>
     </ul>
-    <p align="justify">This work is based on the implementation of the YOLO (You-only-look-once) algorithm for object detection.</p>
+    <p align="justify">A HDR image is made by smartly combining multiple photographs of a scene at different exposures.
+    It involves three main steps: Calibration, Radiance Map, and Tone Mapping. The Camera response curve 
+    is calculated in the first step, followed by a the computation of radiance map. Finally, correction
+     of the color tones in the image is performed.</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
@@ -270,6 +273,43 @@
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/hdr_blend.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> Deep Learning Neural Style Transfer </h3>
+    <ul>
+      <li align="left"> Python, Art-NST, Tensorflow </li>
+    </ul>
+    <p align="justify">A HDR image is made by smartly combining multiple photographs of a scene at different exposures.
+    It involves three main steps: Calibration, Radiance Map, and Tone Mapping. The Camera response curve 
+    is calculated in the first step, followed by a the computation of radiance map. Finally, correction
+     of the color tones in the image is performed. </p>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/"> Private </a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/hdr_blend.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> Facial Recognition (FaceNet) </h3>
+    <ul>
+      <li align="left"> Python, Keras, Tensorflow, Triplet Loss </li>
+    </ul>
+    <p align="justify">A HDR image is made by smartly combining multiple photographs of a scene at different exposures.
+    It involves three main steps: Calibration, Radiance Map, and Tone Mapping. The Camera response curve 
+    is calculated in the first step, followed by a the computation of radiance map. Finally, correction
+     of the color tones in the image is performed. </p>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/"> Private </a>
+  </div>
+</div>
+
 
 <div class="user-projects">
   <div class="images-right">
@@ -292,15 +332,37 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3 align="center"> Implementing YOLO Object detection algorithm </h3>
+    <h3 align="center"> Hand-Sign Recognition with ConvNets </h3>
     <ul>
-      <li align="left"> YOLO, Python, Keras </li>
+      <li align="left"> Python, Tensorflow, CNN, Jupyter </li>
     </ul>
-    <p align="justify">This work is based on the implementation of the YOLO (You-only-look-once) algorithm for object detection.
+    <p align="justify">A HDR image is made by smartly combining multiple photographs of a scene at different exposures.
+    It involves three main steps: Calibration, Radiance Map, and Tone Mapping. The Camera response curve 
+    is calculated in the first step, followed by a the computation of radiance map. Finally, correction
+     of the color tones in the image is performed.
     </p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/hdr_blend.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> Residual Networks on Hand-Sign Dataset </h3>
+    <ul>
+      <li align="left"> Python, Keras, ResNets </li>
+    </ul>
+    <p align="justify">A HDR image is made by smartly combining multiple photographs of a scene at different exposures.
+    It involves three main steps: Calibration, Radiance Map, and Tone Mapping. The Camera response curve 
+    is calculated in the first step, followed by a the computation of radiance map. Finally, correction
+     of the color tones in the image is performed. </p>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/"> Private </a>
+  </div>
+</div>
+
 
 <div class="user-projects">
   <div class="images-right">
@@ -311,7 +373,10 @@
     <ul>
       <li align="left"> Matlab, Simulink, Lyapunov Backstepping </li>
     </ul>
-    <p align="justify"> Lyapunov based based backstepping controller was developed to control an induction motor.
+    <p align="justify"> Lyapunov based based backstepping controller was developed to control an induction motor A HDR image is made by smartly combining multiple photographs of a scene at different exposures.
+    It involves three main steps: Calibration, Radiance Map, and Tone Mapping. The Camera response curve 
+    is calculated in the first step, followed by a the computation of radiance map. Finally, correction
+     of the color tones in the image is performed.
     </p>
     <a class="project-link" href="https://github.com/kbmajeed/endangered_species_dronetracking">Check it out</a>
   </div>
@@ -325,6 +390,23 @@
     <h3 align="center"> High Dynamic Range Imaging </h3>
     <ul>
       <li align="left"> Python, OpenCV </li>
+    </ul>
+    <p align="justify">A HDR image is made by smartly combining multiple photographs of a scene at different exposures.
+    It involves three main steps: Calibration, Radiance Map, and Tone Mapping. The Camera response curve 
+    is calculated in the first step, followed by a the computation of radiance map. Finally, correction
+     of the color tones in the image is performed. </p>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/"> Private </a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/hdr_blend.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> Happiness Detection with CNN </h3>
+    <ul>
+      <li align="left"> Python, Keras </li>
     </ul>
     <p align="justify">A HDR image is made by smartly combining multiple photographs of a scene at different exposures.
     It involves three main steps: Calibration, Radiance Map, and Tone Mapping. The Camera response curve 
