--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -180,7 +180,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/cyberbrain.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Q-Learning for Bot Navigation </h3>
@@ -244,7 +244,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/yolo.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Implementing YOLO Object detection algorithm </h3>
@@ -277,7 +277,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/hdr_blend.png" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/art_nst.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Deep Learning Neural Style Transfer </h3>
@@ -295,7 +295,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/hdr_blend.png" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/facenet.PNG" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Facial Recognition (FaceNet) </h3>
@@ -329,7 +329,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/hand_digit.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Hand-Sign Recognition with ConvNets </h3>
@@ -348,7 +348,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/hdr_blend.png" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/tech.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Residual Networks on Hand-Sign Dataset </h3>
@@ -401,7 +401,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/hdr_blend.png" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/lens-490806_1280.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Happiness Detection with CNN </h3>
@@ -435,7 +435,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/image_blend.png" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/cats.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Cat vs Non-cat classification with Deep Networks </h3>
