--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -378,7 +378,7 @@
     is calculated in the first step, followed by a the computation of radiance map. Finally, correction
      of the color tones in the image is performed.
     </p>
-    <a class="project-link" href="https://github.com/kbmajeed/endangered_species_dronetracking">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
