--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -157,7 +157,7 @@
       These include: number of layers, number of units, dropout, momentum, epochs, batch-size, learning-rate.
       This work explores different values of these parameters and the corresponding performance on an MNIST-DNN model.
     </p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
 
@@ -190,7 +190,7 @@
     <p align="justify"> The Model-free reinforcement learning Q-learning algorithm was programmed for navigating 
     a simple maze. A Q-table is built based on immediate and discounted rewards using experience tuples as the 
       bot interacts with the world. </p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
 
@@ -253,7 +253,7 @@
       also being able to run in real-time. This algorithm "only looks once" at the image in the sense that it 
       requires only one forward propagation pass through the network to make predictions. After non-max suppression,
       it then outputs recognized objects together with the bounding boxes.</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
 
@@ -268,7 +268,7 @@
     </ul>
     <p align="justify">Recurrent Neural Networks (RNN) are excellent for sequence-to-sequence learning.
     In this project cool, they are used to generate names for Dinosaurs.</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
 
@@ -336,7 +336,7 @@
     <p align="justify"> The SIGNS dataset is a collection of 6 signs representing numbers from 0 to 5.
       A ConvNet was built with TensorFlow for solving this classification problem. Steps include: Creating placeholders,
       initializing parameters, forward propagation, computing cost, and then optimization. </p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
 
@@ -439,7 +439,7 @@
     <p align="justify"> Classification of "Cat vs non-Cat" dataset using Deep neural networks.
     Compared to simple logistic regression, the DNN yields better classification accuracy.
     Performance of 70% with logistic regression, 72% with 2 layers, and 80% with a 4 layer network.</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
 
@@ -471,7 +471,7 @@
     <p align="justify">Implementing the paper "A multiresolution spline with application to image mosaics".
       A cool framework was developed to blend images using a predefined mask. This can 
       be used for interesting image editing such as face swaps</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
 
@@ -487,7 +487,7 @@
     <p align="justify">Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
       Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
       (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting.</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
 
