--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -360,7 +360,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/rhino.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/motor.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Nonlinear Backstepping Control of Induction Motor </h3>
