--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -369,9 +369,7 @@
     </ul>
     <p align="justify"> Lyapunov based based backstepping controller was developed to control an induction motor.
       Induction Motors are reliable, rugged and cheap. Main problem arises from: coupled highly nonlinear model,
-      unavailability of certain parameters and time varying nature of some parameters.
-      Nonlinear control techniques such as Feedback linearization, Input-Output linearization, Backstepping, Sliding mode and 
-      Passivity have been applied previously.</p>
+      unavailability of certain parameters and time varying nature of some parameters. </p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
